Add changes to all Windows host versions

--- a/hu-wuhu-80.adoc
+++ b/hu-wuhu-80.adoc
@@ -47,9 +47,9 @@ Verify that your host and storage system configuration are supported before you 
 .Steps
 
 . Check the supported configuration in the http://mysupport.netapp.com/matrix[Interoperability Matrix Tool^].
-. Check the hotfixes required for your Windows Server version in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
+. Check the hotfixes required for your Windows Server host version in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
 +
-For example, the link:https://review.docs.netapp.com/us-en/ontap-sanhost_pc-fcp-iscsi-improve-ol-7may2025/hu-windows-2025.html[Configure Windows Server 2025 for ONTAP storage] documentation provides instructions on installing Windows hotfixes for Windows Server 2025.
+For example, the link:https://review.docs.netapp.com/us-en/ontap-sanhost_pc-fcp-iscsi-improve-ol-7may2025/hu-windows-2025.html[Configure Windows Server 2025 for ONTAP storage] documentation provides the instructions for installing Windows hotfixes for Windows Server 2025.
 . Add the iSCSI, FCP, or NVMe-oF license and start the target service.
 
 . Verify your cabling.
