--- a/hu_wuhu_repair_remove.adoc
+++ b/hu_wuhu_repair_remove.adoc
@@ -4,7 +4,7 @@ permalink: hu_wuhu_repair_remove.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
-= Repair and remove the Windows Host Utilities
+= Repair and remove the Windows Host Utilities for ONTAP storage
 :toc: macro
 :hardbreaks:
 :toclevels: 1
