--- a/hu_wuhu_upgrade.adoc
+++ b/hu_wuhu_upgrade.adoc
@@ -4,7 +4,7 @@ permalink: hu_wuhu_upgrade.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
-= Upgrade the Windows Host Utilities
+= Upgrade Windows Host Utilities for ONTAP storage
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -14,7 +14,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 :imagesdir: ./media/
 
 [.lead]
-You can upgrade Windows Host Utilities by following the installation instructions interactively or by using the Windows command line. You need to install the new Windows Host Utilities installation software on a path that is accessible by the Windows host. 
+You can upgrade Windows Host Utilities software in your ONTAP storage configuration by following the installation instructions interactively or by using the Windows command line. You need to install the new Windows Host Utilities installation software on a path that is accessible by the Windows host. 
 
 [role="tabbed-block"]
 ====
