--- a/hu_wuhu_troubleshoot.adoc
+++ b/hu_wuhu_troubleshoot.adoc
@@ -14,7 +14,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 :imagesdir: ./media/
 
 [.lead]
-Use the general troubleshooting techniques to investigate issues that might occur for a Windows Host Utilities configuration. You should also check the link:hu-wuhu-release-notes.html[Windows Host Utilities Release Notes] for known issues and solutions. 
+Use the general troubleshooting techniques to investigate issues that might occur for a Windows Host Utilities with ONTAP storage configuration. You should also check the link:hu-wuhu-release-notes.html[Windows Host Utilities Release Notes] for known issues and solutions. 
 
 The following is a list of the different areas you can investigate for potential interoperability issues:
 
