--- a/hu_wuhu_upgrade.adoc
+++ b/hu_wuhu_upgrade.adoc
@@ -14,7 +14,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 :imagesdir: ./media/
 
 [.lead]
-You can upgrade Windows Host Utilities software in your ONTAP storage configuration by following the installation instructions interactively or by using the Windows command line. You need to install the new Windows Host Utilities installation software on a path that is accessible by the Windows host. 
+You can upgrade Windows Host Utilities software in your ONTAP storage configuration by following the installation instructions interactively or by using the Windows command line. You need to install the new Windows Host Utilities installation software on a path that is accessible to the Windows host. 
 
 [role="tabbed-block"]
 ====
