minor edits post IE review

--- a/_include/windows/windows-install-host-utilities.adoc
+++ b/_include/windows/windows-install-host-utilities.adoc
@@ -18,5 +18,5 @@ NOTE: Windows XP or Windows Vista running in a Hyper-V virtual machine doesn't s
 
 .Steps
 
-You can install the Host Utilities interactively or by using the command line. The new Host Utilities installation package must be in a path that is accessible by the Windows host. 
+You can install the Host Utilities interactively or by using the command line. The new Host Utilities installation package must be in a path that is accessible to the Windows host. 
 
