--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -296,7 +296,7 @@ Mode",
 .NVMe parameters
 --
 
-The following NVMe Emulex driver parameters are updated when installing Windows Host Utilities 7.2:
+The following NVMe Emulex driver parameters are updated when you install Windows Host Utilities 7.2:
 
 * EnableNVMe = 1
 * NVMEMode = 0
