--- a/hu_wuhu_troubleshoot.adoc
+++ b/hu_wuhu_troubleshoot.adoc
@@ -4,7 +4,7 @@ permalink: hu_wuhu_troubleshoot.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
-= Troubleshoot a Windows Host Utilities with ONTAP storage configuration 
+= Troubleshoot issues for Windows Host Utilities with ONTAP storage configuration 
 :toc: macro
 :hardbreaks:
 :toclevels: 1
