--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -35,6 +35,24 @@ See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^]
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
+== Enable SAN booting
+
+You can configure your host to use SAN booting to simplify deployment and improve scalability.
+
+.Before you begin
+Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
+
+.Steps
+
+. Create a SAN boot namespace and map it to the host.
++
+See https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Provision NVMe storage^].
+. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
++
+For information on how to enable the HBA BIOS, see your vendor-specific documentation.
+
+. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+
 == Enable NVMe/FC 
 
 You can use the following procedure to enable NVMe/FC.
